# project-megraphs

./: .gitignore  Makefile  README.md  SPEC.md  conanfile.txt  parser.cc  parser.h  requirements.txt  setup.sh  stochastic-block.py
Python-Files/: Base.py  Centralities.py  Fluid.py  GraphReader.ipynb  Metrics.ipynb  csv2mtx.py  graphCentralities.ipynb  pythoncode.py  requirements.txt  tech-internet-as.mtx
Python-Files/.ipynb_checkpoints/: Metrics-checkpoint.ipynb  graphCentralities-checkpoint.ipynb
assets/: L_tech-internet-as.mtx  M_web-edu.csv  M_web-edu.mtx  full.jsonl  grid2_dual.mtx  mk10-b2.mtx  p5.html  p76.html  soc-karate.csv  tech-internet-as.csv  webedu_nt.html  webedu_nt_rc.html
assets/proteins/: 101.mtx  1017.mtx  1024.mtx  106.mtx  1065.mtx  107.mtx  1072.mtx  1075.mtx  111.mtx  122.mtx  123.mtx  137.mtx  138.mtx  139.mtx  142.mtx  143.mtx  153.mtx  157.mtx  160.mtx  161.mtx  164.mtx  167.mtx  17.mtx  171.mtx  174.mtx  177.mtx  179.mtx  180.mtx  182.mtx  183.mtx  185.mtx  188.mtx  (+168 more)
cpp-src/: hello.cpp  readme.md
extra/: Centralities.py  GraphReader.ipynb  SPEC.md  mtx2csv.py  paraquetcsv2mtx.py  pyvis-test.py  web-edu.mtx
models/: closeness_M_web-edu.csv  closeness_approx.ipynb  labeled_real_webedu.xlsx  test.ipynb
outputs/: reddit_data.csv
py-src/: Base.py  P_M_web-edu.mtx_csv  all_centralities.ipynb  allcentralities_csv.py  community_detect.ipynb  entropy.py  node_selection.py  requirements.txt  stochastic-block.py  t.py
src/: CMakeLists.txt  conanfile.txt  main.cc  parser.cc
src/include/: CMakeLists.txt  herodotos.hpp  parser.cc  parser.h
(+191 files in other folders)
